updated README.md and added resume to index.html

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <div class="col icons">
                     <a href="https://www.linkedin.com/in/steven-shields-64689118a/"><i class="fab fa-linkedin-in alignment"></i></a>
                     <a href="https://www.github.com/sshields9591"><i class="fab fa-github alignment"></i></a>
-                    <a href="#"><i class="fas fa-file-download alignment"></i></a>
+                    <a href="resume.docx"><i class="fas fa-file-download alignment"></i></a>
                     <a href="#" style='padding-right: 0px'><i class="fab fa-facebook alignment"></i></a>
                 </div>
             </div>
